# Companion-Line-Interface

./: .gitignore  CMakeLists.txt  README.md  config.txt
animations/: lol.anim  rabbit.anim  snake.anim
data/: log.txt
minigames/src/: pong.cpp  snake.cpp
src/: CLI.cpp  ConfigParser.cpp  ConfigParser.h  Logger.cpp  Pet.cpp  Pet.h  Vars.cpp  main.cpp
src/headers/: CLI.h  ConfigParser.h  Logger.h  MinigamesManager.h  Pet.h  Renderer.h  TimeMachine.h  Vars.h
